# corplink-rs

./: .gitignore  .gitmodules  CODE_QUALITY_REPORT.md  CODE_QUALITY_REVIEW.md  CRITICAL_FIXES.md  Cargo.toml  EVALUATION_SUMMARY.md  INDEX.md  ISSUE_DISTRIBUTION.md  README.md  README_EVALUATION.md  build.rs
.github/workflows/: release.yml  test.yml
config/: config.json
libwg/: build.ps1  build.sh  version.go
pack/: PKGBUILD
scripts/: setup.ps1
src/: api.rs  client.rs  config.rs  dns.rs  main.rs  qrcode.rs  resp.rs  sock.rs  state.rs  template.rs  totp.rs  utils.rs  wg.rs
src/dns/: darwin.rs  linux.rs  mod.rs  win.rs
systemd/: corplink-rs.service  corplink-rs@.service
