[package]
name = "corplink-rs"
version = "0.3.6"
edition = "2021"

[dependencies]
regex = "1"
reqwest = { version = "0.11", features = ["json", "gzip", "deflate", "cookies"] }
# for debug
# reqwest = { version = "0.11", features = ["json", "gzip", "deflate", "cookies", "socks"] }
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
cookie = "0.16"
cookie_store = "0.19"
reqwest_cookie_store = "0.5"
tinytemplate = "1.2"
md5 = "0.7"
sha2 = "0.10"
base32 = "0.4"
base64 = "0.13"
rand = "0.7"
x25519-dalek = "1"
httpdate = "1.0"
chrono = "0.4.23"
cfg-if = "1.0.0"
# linux privilege check
sudo = "0.6.0"
# windows privilege check
is_elevated = "0.1.2"
# windows unix socket
uds_windows = "1.0.2"

# string_template = "0.2"
# dependency for basic-otp
# basic-otp = "0.1"
hmac-sha1 = "0.1"
byteorder = "1.4"
